@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2007-2018  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2007-2021  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -1215,7 +1215,7 @@ X(fdiv_sss)
 		return;
 	}
 
-	d = ieee_store_float_value(f1.f / f2.f, IEEE_FMT_D);
+	d = ieee_store_float_value(f1.f / f2.f, IEEE_FMT_S);
 
 	reg(ic->arg[0]) = d;
 }
