@@ -4943,3 +4943,6 @@ Changelog for GXemul:
 20210130	Writing guest OS install instructions for running OpenBSD/
 		luna88k with root-on-nfs, which involves using NetBSD/pmax as
 		an NFS server and OpenBSD/sgi (!) to run MAKEDEV.
+20210207	Fixing a spelling mistake in the 88K fdiv.sss instruction,
+		making self-compilation of [an older version of] GXemul inside
+		OpenBSD/luna88k get further.
